--- a/drug_discovery_with_gnns/solubility.ipynb
+++ b/drug_discovery_with_gnns/solubility.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "authorship_tag": "ABX9TyM4xygC2Ed+N/pNX+FwTjJ0",
-      "include_colab_link": true
+      "include_colab_link": false
     },
     "kernelspec": {
       "name": "python3",
