colab badge added

--- a/drug_discovery_with_gnns/toxicity.ipynb
+++ b/drug_discovery_with_gnns/toxicity.ipynb
@@ -21,6 +21,8 @@
       "source": [
         "# Toxicity Prediction using Deepchem - Demo\n",
         "\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1I73Alqgkp5yfN9BRpaJa9dKVmAwuQcVY?usp=sharing)\n",
+        "\n",
         "The Deepchem and dataset setup below was taken from the official tutorial: [link ](https://github.com/deepchem/deepchem/blob/master/examples/tutorials/03_Modeling_Solubility.ipynb)\n",
         "\n",
         "The code is a modified version of this [file](https://github.com/deepchem/deepchem/blob/master/examples/tox21/tox21_tensorgraph_graph_conv.py)."
